--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Shadowy Depths</title>
   <style>
     body { padding: 0px; margin: 0px; width: 100%; height: 100%; overflow: hidden; }
+    canvas { height: 100%; }
   </style>
 </head>
 <body>
