stretch canvas to browser window

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>Shadowy Depths</title>
   <style>
     body { padding: 0px; margin: 0px; width: 100%; height: 100%; overflow: hidden; }
-    canvas { height: 100%; }
+    canvas { width: 100%; height: 100%; }
   </style>
 </head>
 <body>
-  <canvas id="canvas" width="800" height="800" style="background-color:#333333;" ></canvas>
+  <canvas id="canvas" width="512" height="512" style="background-color:#333333;" ></canvas>
   <script src="javascripts/Box2dWeb-2.1.a.3.js"></script>
   <script src="javascripts/jquery-1.9.1.js"></script>
   <script src="javascripts/dungCarv.js"></script>
