--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <script src="javascripts/Box2dWeb-2.1.a.3.js"></script>
   <script src="javascripts/jquery-1.9.1.js"></script>
   <script src="javascripts/dungCarv.js"></script>
+  <script src="javascripts/map.js"></script>
+  <script src="javascripts/mob.js"></script>
+  <script src="javascripts/player.js"></script>
+  <script src="javascripts/cerberus.js"></script>
   <script src="javascripts/app.js"></script>
 </body>
 </html>
