--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
   <!-- facebook share button dependency -->
   <div id="fb-root"></div>
 
@@ -111,6 +110,6 @@
     });
 
   </script>
-  
+  <canvas id="box2ddebug" width="256" height="256" style="position: absolute; left: 0px; top: 0px; background: #000; z-index: 5;"></canvas>
 </body>
 </html>
