work in progress

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="javascripts/Cerberus.js"></script>
   <script type="text/javascript" src="javascripts/MapView.js"></script>
   <script type="text/javascript" src="javascripts/PlayerView.js"></script>
+  <script type="text/javascript" src="javascripts/CerberusView.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
