disable debug draw by default and allow toggle with hotkey

--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@
     });
 
   </script>
-  <canvas id="box2ddebug" width="256" height="256" style="position: absolute; left: 0px; top: 0px; background: #000; z-index: 5;"></canvas>
+  <canvas id="box2ddebug" width="256" height="256" style="position: absolute; left: 0px; top: 0px; z-index: 5;"></canvas>
 </body>
 </html>
